# scrapy-db

./: .gitignore  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: codecov.yaml  publish.yaml  test.yaml
example-project/: main.py  scrapy.cfg
example-project/example/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
example-project/example/spiders/: demo.py
scrapy_db/: __init__.py  db.py  defaults.py  dupefilter.py  queue.py  scheduler.py  spiders.py  utils.py
src/scrapy_db/: __init__.py  db.py  defaults.py  dupefilter.py  queue.py  scheduler.py  spiders.py
tests/: conftest.py  test_db.py  test_dupefilter.py  test_meta_data.py  test_queue.py  test_scheduler.py  test_spiders.py  test_utils.py
